fix odd indepentation of member data on small screens
(scss only)

--- a/app/assets/stylesheets/global/_object-list.scss
+++ b/app/assets/stylesheets/global/_object-list.scss
@@ -57,4 +57,8 @@
       margin-right: 1em;
     }
   }
+
+  &:first-child {
+    margin-left: 0;
+  }
 }
